--- a/docs/tutorial-QGIS-Tim.qmd
+++ b/docs/tutorial-QGIS-Tim.qmd
@@ -3,11 +3,11 @@ title: "Tutorial QGIS-Tim"
 ---
 
 ## Requirements
-- Be sure QGIS 3.22.00 or higher is installed. 
+- Be sure QGIS version 3.22.00 or higher is installed. 
 - Be sure the ``gistim`` Python package is installed (see [installation](install.qmd) for instructions). 
-- Download the tutorial material [Follow this link.](https://deltares.thegood.cloud/s/zryWnfjT43Ryoea)
-- Installation of the QGIS-Tim and iMOD plugin is part of this Tutorial and the necessary ZIP files are included in the tutorial material. 
-- Internet connections is optional for the Tutorial and only required for installation of additional plugins and the use of an online topographic background map.  
+- Download the tutorial material. [Follow this link.](https://deltares.thegood.cloud/s/zryWnfjT43Ryoea)
+- Installation of the QGIS-Tim plugin and ithe MOD plugin is part of this Tutorial and the necessary ZIP files are included in the tutorial material. 
+- Internet connections is optional during this Tutorial. It is only required for installation of additional plugins and the use of an online topographic background map.  
 
 ## Description
 In this tutorial, you will learn how to:
