--- a/docs/tutorial-QGIS-Tim.qmd
+++ b/docs/tutorial-QGIS-Tim.qmd
@@ -31,8 +31,6 @@ At the project location, the top layer is 12 m thick and consists of a low perme
 ## Getting Started 
 (@) Launch QGIS from your START menu, your desktop or click on …\\QGIS3.28.0\\bin\\qgis-bin.exe.
 
----
-
 > **Intermezzo:** *QGIS language settings*
 > 
 > Perhaps your QGIS was installed in another language than English. Because the Tutorial refers to the English version, let’s change to English. 
@@ -43,7 +41,6 @@ At the project location, the top layer is 12 m thick and consists of a low perme
 > a. From the drop-down menu *“User interface translation”* select *American English* and click *OK*. 
 > a. Close QGIS and open it again to activate your language change.
 
----
 
 We start with the creation of a new QGIS project.
 
@@ -150,16 +147,12 @@ Your window looks like in @fig-Panel-QGIS-Tim.
 
 If you had no introduction to the Tim plugin, read the Intermezzo below for a general explanation of the components. 
 
----
-
 > **Intermezzo:** *introduction Tabs on the Tim panel* 
 > 
 > a. GeoPackage: an overview of the elements in your geopackage. In case you switch to transient modelling, an extra column with *ttim* elements is added. 
 > a. Elements: a list of 14 Tim elements from which you can build your model. 
 > a. Compute: here you can define your domain and cell size, decide if your model is transient or not and change the output name. 
 > a. Extract: open an existing 3d geohydrological model (NC file) and extract the data for your project area. 
-
----
 
 Now we are ready to define our first steady state model by parameterizing our Aquifer. <br>
 
@@ -204,12 +197,10 @@ After the calculation you see that the result is automatically added to the geop
 
 The calculation result is now visible and we see a raster with just the value 0, not a very exciting result because no other elements are present yet. Let's now add a well element.
 
-> **Intermezzo:** *Mesh and Raster explained*
+> **Intermezzo:** *Mesh and Raster format explained*
 > 
-> - Raster: is made up of pixels (also referred to as grid cells). They are usually regularly spaced and square but they don’t have to be. Preferred format to create cross sections or evaluate values at your mouse location. 
-> - Mesh: an unstructured grid usually with temporal and other components. Preferred format to animate temporal data and to perform calculations.  
-
-
+> - Mesh: an unstructured grid usually with temporal and other components. Preferred format in QGIS-Tim to animate temporal data, to create cross sections or evaluate values at your mouse position.
+> - Raster: is made up of pixels (also referred to as grid cells). They are regularly spaced and square. Preferred format in QGIS-Tim to perform calculations with the *Raster Calculator* tool. 
 
 ## Model 2: single well
 
@@ -424,7 +415,7 @@ You can not miss the effect of the Lake in this calculation. In many cases you l
 (@) Click the button *Set path as ...* and change the name of the output, e.g. "case-Rijsenhout-NoLake". 
 (@) Click *Compute* to run the model without the Lake. 
 
-The new results are added as new layer to the project. Check for instance sub-group "raster" under the group "case-Rijsenhout output". Now we use QGIS to calculate the head difference for layer 0.
+The new results are added as new layer to the project. Check for instance sub-group "raster" under the group "case-Rijsenhout output". Now we use QGIS to calculate the head difference for layer 0. For raster calculations we prefer *Raster Calculator* over the *Mesh Calculator* in QGIS. 
 
 (@) From the QGIS main menu *Raster* select the tool *Raster Calculator* and the tool window opens. 
 (@) In the section *Raster Calculator Expression* you can create an expression using the elements from *Raster Bands* and *Operators*. Create this expression: "case-Rijsenhout-head_layer_001 - case-Rijsenhout-NoLake-head_layer_001".
